# nurfa

./: Makefile  README.md  mypy.ini  nurfa.code-workspace  package-lock.json  package.json  pyproject.toml  serverless.yml
nurfa/: consts.py  main.py
nurfa/services/: llm.py  news.py  pdl.py  types.py
nurfa/services/api/: news_api.py  pdl_api.py
nurfa/v1/: router.py
nurfa/v1/routers/: news.py
